k8s/boot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fablewhirl-api
  namespace: fablewhirl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - fablewhirl.pw
      secretName: fablewhirl-pw-tls
  rules:
    - host: fablewhirl.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
